unpackaged/main/default/objects/sked_User_Profile_Object_Access__mdt/fields/sked_Can_Delete__c.field-meta.xml
<CustomField>
    <fullName>sked_Can_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Delete</label>
    <type>Checkbox</type>
</CustomField>