unpackaged/main/default/objects/sked_User_Profile_Object_Access__mdt/fields/sked_Can_Update__c.field-meta.xml
<CustomField>
    <fullName>sked_Can_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Update</label>
    <type>Checkbox</type>
</CustomField>