unpackaged/main/default/objects/sked_User_Profile_Object_Access__mdt/fields/sked_Scenario__c.field-meta.xml
<CustomField>
    <fullName>sked_Scenario__c</fullName>
    <label>Scenario</label>
    <length>65</length>
    <required>true</required>
    <type>Text</type>
</CustomField>