unpackaged/main/default/objects/sked_User_Profile_Object_Access__mdt/fields/sked_Target__c.field-meta.xml
<CustomField>
    <fullName>sked_Target__c</fullName>
    <description>Target which the custom metadata applies to (Profile/User)</description>
    <label>Target</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>