unpackaged/main/default/objects/sked_User_Profile_Object_Access__mdt/fields/sked_Target_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Target_Type__c</fullName>
    <label>Target Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Profile</fullName>
                <default>true</default>
                <label>Profile</label>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>